--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <title>HON- Heroes of NFT</title>
